fix dark mode II

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -866,7 +866,7 @@ span.MuiBottomNavigationAction-label{
 
 
 .switch{
-    margin-top: 222px;
+    margin-top: 180px;
 }
 
 
